--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.4.1",
     "firebase": "^11.0.1",
     "lodash": "^4.17.21",
     "pinia": "^2.2.4",
